[package]
name = "rust_wasm_touch"
version = "0.1.0"
authors = ["Ricardo Bento <ricardo@flowhospitalitytraining.co.uk>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.dev]
opt-level = 1

[features]
default = [
    "bevy/bevy_gltf",
    "bevy/bevy_winit",
    "bevy/render",
    "bevy/png",
    "game_plugin/default"
]

native = [
    "bevy/bevy_wgpu",
    "game_plugin/native"
]

web = [
    "bevy_webgl2",
]

dev = [
    "bevy/dynamic",
    "native",
]

[dependencies]
wasm-bindgen = "0.2.63"
wee_alloc = { version = "0.4.5", optional = true }
bevy = { version = "0.5.0", default-features = false }
game_plugin = {path = "game_plugin"}
winit = "0.24.0"
bevy_webgl2 = {version = "0.5.0", optional = true}

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[build-dependencies]
embed-resource = "1.4"

[profile.release]
opt-level = "s"
